styles: Stop setting pending .oo-ui-toolbar-bar to 'transparent'
The toolbar is disabled by the surface being set to read-only; we
don't need a pending texture on the toolbar as well as the surface,
it looks odd.

--- a/modules/styles/flow/widgets/editor/mw.flow.ui.editor-wikimediauitheme.less
+++ b/modules/styles/flow/widgets/editor/mw.flow.ui.editor-wikimediauitheme.less
@@ -23,12 +23,6 @@
 			// of the TextInputWidget
 			margin: -@editorToolbarHeight 1px 1px 1px;
 
-			.oo-ui-toolbar-bar {
-				// When we apply a pending texture to the editor, we don't want the toolbar to display
-				// in solid white on top of that.
-				background: transparent;
-			}
-
 			// Expand toolbar into focus inset when not focused.
 			> .oo-ui-toolbar-bar {
 				margin: 0 -1px;
